<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/editor_fragment">

    <fragment
        android:id="@+id/editor_fragment"
        android:name="com.trixxwids.app.ui.editor.EditorFragment"
        android:label="@string/tab_editor"
        tools:layout="@layout/fragment_editor" />

    <fragment
        android:id="@+id/my_widgets_fragment"
        android:name="com.trixxwids.app.ui.mywidgets.MyWidgetsFragment"
        android:label="@string/tab_my_widgets"
        tools:layout="@layout/fragment_my_widgets" />

    <fragment
        android:id="@+id/help_fragment"
        android:name="com.trixxwids.app.ui.help.HelpFragment"
        android:label="@string/tab_help"
        tools:layout="@layout/fragment_help" />

</navigation>
